Fixed Issues
References to java.eawt have been removed and now noted, though done in previous check-in.
Warnings have been fixed for the most part.